# Loot-for-sentry-sim

./: .clangd  .gitattributes  .gitignore  .gitmodules  .luarc.json  AGENTS.md  CMakeLists.txt  LICENSE  READEME.md  README.md  package.xml  plugins.xml
.github/workflows/: ci.yml
Loot/lua/Loot/: init.lua  loot_probe.lua
Loot/lua/Loot/config/: train.lua
cmake/: export.cmake
config/: custom.yaml  follow_waypoints.yaml  motion-mock.xml  motion-mock.yaml  motion.xml  motion.yaml  nav2.yaml  plan.yaml  rmuc.yaml  rmul.yaml  rule.yaml  sensor.yaml
doc/: adjustment-navigation.md  call-chain.drawio
godot-mock/: project.godot  rmuc.glb.import
godot-mock/material/: white_wood.png.import
godot-mock/models/: Cn_Mat_U_LMSuit_21_body_BIANSE.tres  cube.glb  cube.glb.import  cube.mesh  cube_material.tres  rmuc.glb  rmuc.glb.import  white_cube_material.tres  white_wood.png.import
godot-mock/scene/: battlefiled.tscn  character_body_3d.gd  character_body_3d.gd.uid  enemy.gd  enemy.gd.uid  loot_flow_view.gd  loot_flow_view.gd.uid  loot_overlay_3d.gd.uid  outpost_cube.tscn  sim_armor.gd  sim_armor.gd.uid  sim_bullet.gd  sim_sidecar_client.gd  sim_sidecar_client.gd.uid  sim_structure_hitbox.gd.uid  sim_structure_target.gd  sim_structure_target.gd.uid
launch/: custom.launch.py  follow_waypoints.launch.py  motion.launch.yaml  nav2.launch.py  online.launch.py  recall.launch.yaml  sensor.launch.yaml  static.launch.yaml  test.py
maps/: empty.yaml  local_mock.yaml  map.yaml  rmuc.lua  rmuc.region.json  rmul.yaml  train_map.lua  train_map.region.json  train_map.yaml
scripts/: debug_goal_bridge.py  goal_topic_bridge.py  static_grid_publisher.py
src/: brain.cc  main.cc
src/app/: test.cc  test.ccm  test.hh
src/brain/: plan.cc  plan.hh
src/component/: component.cc
src/component/brain/: rule.hh
src/component/decision/: config.hh  plan.cc  plan.hh
src/component/util/: bool_edge_trigger.hh  delayed_task_queue.hh  fsm.hh  navigation_restarter.hh  status.hh  switch_event_detector.hh  tie.hh  value_enter_detector.hh
src/core/map/: generator.cc  generator.hh
src/cxx/: component.cc  context.cc  context.hh  lua_context.cc  lua_context.hh  navigation.cc  navigation.hh  sim_sidecar.cc
src/cxx/controller/: common.hh  normal.hh  params.hh  road.hh  slope.hh  step.hh
src/cxx/util/: logger_mixin.hh  node_mixin.hh  pimpl.hh  rmcs_msgs_format.hh
src/cxx/util/localization/: engine.cc  engine.hh
src/cxx/util/navigation/: navigation.cc  navigation.hh
src/decision/: decision.py
src/lua/: AGENTS.md  action.lua  api.lua  blackboard.lua  context.lua  main.lua  map.lua  option.lua  region.lua  rmuc_map.lua  train_map.lua
src/lua/endpoint/: competition-test.lua  main.lua  mock.lua  send.lua  sim_main.lua  test.lua  train-decision.lua  train-test.lua  train.lua
src/lua/intent/: chase.lua  cruise-to-kill.lua  cruise.lua  escape-to-home.lua  forward-press.lua  getout.lua  guard-home.lua  idle.lua  keep-cruise.lua  start-cruise-train.lua  start-cruise.lua
src/lua/intent/competion/: escape-to-home.lua  keep-cruise.lua
src/lua/intent/train/: cross-road.lua  escape-to-home.lua  keep-cruise.lua  start-cruise-train.lua
src/lua/launch/: navigation.lua
src/lua/mini-task/: crossing-road-zone.lua
src/lua/task/: cross-fluctuant-road.lua  cross-road-zone.lua  crossing-fluctuant-road.lua  crossing-road-zone-train.lua  crossing-road-zone.lua  crossing-rough-terrain.lua  cruise-in-central-highlands.lua  fluctuant-stuck-self-rescue.lua  go-down-onestep.lua  navigate-to-fluctuant-begin.lua  navigate-to-point.lua  occupy-fortress.lua  slope-down.lua  step-down.lua  stuck-self-rescue.lua  switch-mode.lua
src/lua/task/cross-fluctuant/: cross-fluctuant-road.lua  navigate-to-fluctuant-begin.lua
src/lua/task/cross-road/: cross-road-zone.lua
src/lua/task/cruise-in-central-highland/: cruise-in-central-highlands.lua
src/lua/task/forward-press/: forward-press-in-one-step.lua  forward-press-in-two-step.lua
src/lua/task/guard-home/: cruise-in-front-of-base.lua  occupy-fortress.lua
src/lua/task/one-step/: go-down-onestep.lua
src/lua/task/supply/: supply-ammunition.lua  supply-health.lua
src/lua/util/: ascii_art.lua  blackboard_logger.lua  clock.lua  edge.lua  fsm.lua  math.lua  native.lua  order.lua  return-stage.lua  scheduler.lua
src/script/: goal_topic_bridge.py
src/sim/Loot/: sim_sidecar.cc
src/sim/Loot/lua/Loot/: blackboard_sync.lua  probe.lua
src/sim/Loot/lua/Loot/config/: competition-test.lua  test.lua
src/sim/godot-mock/: project.godot
src/sim/godot-mock/material/: 20260422-192911.png.import  Cn_Mat_U_LMSuit_21_body_BIANSE.tres
src/sim/godot-mock/models/: cube_material.tres  icon.svg.import
src/sim/godot-mock/scene/: base_cube.tscn  battlefiled.tscn  character_body_3d.gd  loot_overlay_3d.gd  sim_bullet.gd  sim_bullet.gd.uid  sim_sidecar_client.gd  sim_structure_hitbox.gd
src/util/: fsm.ccm  fsm.hh
src/util/rclcpp/: node.cpp  node.details.hh  node.hh
test/: CMakeLists.txt  bool_edge_trigger.cc  fsm.cc  map.cc  plan_box.cc  test.cmake
test/.cache/clangd/index/: fsm.cc.B7DEAC8886980F9C.idx
test/lua/: blackboard_sync.lua  clock.lua  fsm.lua  order.lua  restart_navigation.lua  runable.lua  scheduler.lua  sim_main.lua  util.lua
