<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcs-navigation</name>
  <version>0.0.0</version>
  <description>Sentry navigation system with modern cpp</description>
  <maintainer email="creeper5820@protonmail.com">creeper5820</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rmcs_executor</depend>
  <depend>rmcs_msgs</depend>
  <depend>nav2_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>point_lio</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rmcs_local_map</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
